test/asm/max-errors.err
error: max-errors.asm(3):
    Expected constant expression: PC is not constant at assembly time
error: Reached 1 error; assembly aborted!
